# SDL2

./: CMakeLists.txt  README.md
VisualC-WinRT/UWP_VS2015/: SDL-UWP.vcxproj
winrt/: CMakeLists.txt
