cmake_minimum_required(VERSION 3.5)
project(SDL2_UWP)

include_directories("../include")

set(INCLUDE_FILES
    "../include/begin_code.h"
    "../include/close_code.h"
    "../include/SDL.h"
    "../include/SDL_assert.h"
    "../include/SDL_atomic.h" 
    "../include/SDL_audio.h" 
    "../include/SDL_blendmode.h" 
    "../include/SDL_clipboard.h" 
    "../include/SDL_config.h" 
    "../include/SDL_config_minimal.h" 
    "../include/SDL_config_winrt.h" 
    "../include/SDL_copying.h" 
    "../include/SDL_cpuinfo.h" 
    "../include/SDL_egl.h" 
    "../include/SDL_endian.h" 
    "../include/SDL_error.h" 
    "../include/SDL_events.h" 
    "../include/SDL_filesystem.h" 
    "../include/SDL_haptic.h" 
    "../include/SDL_hints.h"
    "../include/SDL_joystick.h" 
    "../include/SDL_keyboard.h" 
    "../include/SDL_keycode.h" 
    "../include/SDL_loadso.h" 
    "../include/SDL_log.h" 
    "../include/SDL_main.h" 
    "../include/SDL_mouse.h" 
    "../include/SDL_mutex.h" 
    "../include/SDL_name.h" 
    "../include/SDL_opengles2.h" 
    "../include/SDL_pixels.h" 
    "../include/SDL_platform.h" 
    "../include/SDL_power.h" 
    "../include/SDL_quit.h" 
    "../include/SDL_rect.h" 
    "../include/SDL_render.h" 
    "../include/SDL_revision.h" 
    "../include/SDL_rwops.h" 
    "../include/SDL_scancode.h" 
    "../include/SDL_shape.h" 
    "../include/SDL_stdinc.h" 
    "../include/SDL_surface.h" 
    "../include/SDL_system.h" 
    "../include/SDL_syswm.h" 
    "../include/SDL_thread.h" 
    "../include/SDL_timer.h" 
    "../include/SDL_touch.h" 
    "../include/SDL_types.h" 
    "../include/SDL_version.h" 
    "../include/SDL_video.h" 
    "../src/audio/disk/SDL_diskaudio.h" 
    "../src/audio/dummy/SDL_dummyaudio.h" 
    "../src/audio/SDL_audiodev_c.h" 
    "../src/audio/SDL_audio_c.h" 
    "../src/audio/SDL_sysaudio.h" 
    "../src/audio/SDL_wave.h" 
    "../src/audio/xaudio2/SDL_xaudio2.h" 
    "../src/audio/xaudio2/SDL_xaudio2_winrthelpers.h" 
    "../src/core/windows/SDL_directx.h" 
    "../src/core/windows/SDL_windows.h" 
    "../src/core/windows/SDL_xinput.h" 
    "../src/core/winrt/SDL_winrtapp_common.h" 
    "../src/core/winrt/SDL_winrtapp_direct3d.h" 
    "../src/core/winrt/SDL_winrtapp_xaml.h" 
    "../src/dynapi/SDL_dynapi.h" 
    "../src/dynapi/SDL_dynapi_overrides.h" 
    "../src/dynapi/SDL_dynapi_procs.h" 
    "../src/events/blank_cursor.h" 
    "../src/events/default_cursor.h" 
    "../src/events/SDL_clipboardevents_c.h" 
    "../src/events/SDL_dropevents_c.h" 
    "../src/events/SDL_events_c.h" 
    "../src/events/SDL_keyboard_c.h" 
    "../src/events/SDL_mouse_c.h" 
    "../src/events/SDL_sysevents.h" 
    "../src/events/SDL_touch_c.h" 
    "../src/events/SDL_windowevents_c.h" 
    "../src/haptic/SDL_haptic_c.h" 
    "../src/haptic/SDL_syshaptic.h" 
    "../src/haptic/windows/SDL_dinputhaptic_c.h" 
    "../src/haptic/windows/SDL_windowshaptic_c.h" 
    "../src/haptic/windows/SDL_xinputhaptic_c.h" 
    "../src/joystick/SDL_gamecontrollerdb.h" 
    "../src/joystick/SDL_joystick_c.h" 
    "../src/joystick/SDL_sysjoystick.h" 
    "../src/joystick/windows/SDL_dinputjoystick_c.h" 
    "../src/joystick/windows/SDL_windowsjoystick_c.h" 
    "../src/joystick/windows/SDL_xinputjoystick_c.h" 
    "../src/render/direct3d11/SDL_render_winrt.h" 
    "../src/render/mmx.h" 
    "../src/render/opengles2/SDL_gles2funcs.h" 
    "../src/render/opengles2/SDL_shaders_gles2.h" 
    "../src/render/SDL_d3dmath.h" 
    "../src/render/SDL_sysrender.h" 
    "../src/render/SDL_yuv_sw_c.h" 
    "../src/render/software/SDL_blendfillrect.h" 
    "../src/render/software/SDL_blendline.h" 
    "../src/render/software/SDL_blendpoint.h" 
    "../src/render/software/SDL_draw.h" 
    "../src/render/software/SDL_drawline.h" 
    "../src/render/software/SDL_drawpoint.h" 
    "../src/render/software/SDL_render_sw_c.h" 
    "../src/render/software/SDL_rotate.h" 
    "../src/SDL_assert_c.h" 
    "../src/SDL_error_c.h" 
    "../src/SDL_internal.h" 
    "../src/thread/SDL_systhread.h" 
    "../src/thread/SDL_thread_c.h" 
    "../src/thread/stdcpp/SDL_sysmutex_c.h" 
    "../src/thread/stdcpp/SDL_systhread_c.h" 
    "../src/timer/SDL_timer_c.h" 
    "../src/video/dummy/SDL_nullevents_c.h" 
    "../src/video/dummy/SDL_nullframebuffer_c.h" 
    "../src/video/dummy/SDL_nullvideo.h" 
    "../src/video/SDL_blit.h" 
    "../src/video/SDL_blit_auto.h" 
    "../src/video/SDL_blit_copy.h" 
    "../src/video/SDL_blit_slow.h" 
    "../src/video/SDL_egl_c.h" 
    "../src/video/SDL_pixels_c.h" 
    "../src/video/SDL_rect_c.h" 
    "../src/video/SDL_RLEaccel_c.h" 
    "../src/video/SDL_shape_internals.h" 
    "../src/video/SDL_sysvideo.h" 
    "../src/video/winrt/SDL_winrtevents_c.h" 
    "../src/video/winrt/SDL_winrtgamebar_cpp.h" 
    "../src/video/winrt/SDL_winrtmessagebox.h" 
    "../src/video/winrt/SDL_winrtmouse_c.h" 
    "../src/video/winrt/SDL_winrtopengles.h" 
    "../src/video/winrt/SDL_winrtvideo_cpp.h" 
)

set(SOURCE_FILES
    "../src/atomic/SDL_atomic.c" 
    "../src/atomic/SDL_spinlock.c" 
    "../src/audio/disk/SDL_diskaudio.c" 
    "../src/audio/dummy/SDL_dummyaudio.c" 
    "../src/audio/SDL_audio.c" 
    "../src/audio/SDL_audiocvt.c" 
    "../src/audio/SDL_audiodev.c" 
    "../src/audio/SDL_audiotypecvt.c" 
    "../src/audio/SDL_mixer.c" 
    "../src/audio/SDL_wave.c" 
    "../src/audio/xaudio2/SDL_xaudio2.c" 
    "../src/audio/xaudio2/SDL_xaudio2_winrthelpers.cpp"
    "../src/core/windows/SDL_windows.c" 
    "../src/core/windows/SDL_xinput.c" 
    "../src/core/winrt/SDL_winrtapp_common.cpp"
    "../src/core/winrt/SDL_winrtapp_direct3d.cpp"
    "../src/core/winrt/SDL_winrtapp_xaml.cpp"
    "../src/cpuinfo/SDL_cpuinfo.c" 
    "../src/dynapi/SDL_dynapi.c" 
    "../src/events/SDL_clipboardevents.c" 
    "../src/events/SDL_dropevents.c" 
    "../src/events/SDL_events.c" 
    "../src/events/SDL_gesture.c" 
    "../src/events/SDL_keyboard.c" 
    "../src/events/SDL_mouse.c" 
    "../src/events/SDL_quit.c" 
    "../src/events/SDL_touch.c" 
    "../src/events/SDL_windowevents.c" 
    "../src/filesystem/winrt/SDL_sysfilesystem.cpp"
    "../src/file/SDL_rwops.c" 
    "../src/haptic/dummy/SDL_syshaptic.c" 
    "../src/haptic/SDL_haptic.c" 
    "../src/haptic/windows/SDL_dinputhaptic.c" 
    "../src/haptic/windows/SDL_windowshaptic.c" 
    "../src/haptic/windows/SDL_xinputhaptic.c" 
    "../src/joystick/dummy/SDL_sysjoystick.c" 
    "../src/joystick/SDL_gamecontroller.c" 
    "../src/joystick/SDL_joystick.c" 
    "../src/joystick/windows/SDL_dinputjoystick.c" 
    "../src/joystick/windows/SDL_windowsjoystick.c" 
    "../src/joystick/windows/SDL_xinputjoystick.c" 
    "../src/loadso/windows/SDL_sysloadso.c" 
    "../src/power/SDL_power.c" 
    "../src/power/winrt/SDL_syspower.cpp" 
    "../src/render/direct3d11/SDL_render_d3d11.c" 
    "../src/render/direct3d11/SDL_render_winrt.cpp"
    "../src/render/opengles2/SDL_render_gles2.c" 
    "../src/render/opengles2/SDL_shaders_gles2.c" 
    "../src/render/SDL_d3dmath.c" 
    "../src/render/SDL_render.c" 
    "../src/render/SDL_yuv_mmx.c" 
    "../src/render/SDL_yuv_sw.c" 
    "../src/render/software/SDL_blendfillrect.c" 
    "../src/render/software/SDL_blendline.c" 
    "../src/render/software/SDL_blendpoint.c" 
    "../src/render/software/SDL_drawline.c" 
    "../src/render/software/SDL_drawpoint.c" 
    "../src/render/software/SDL_render_sw.c" 
    "../src/render/software/SDL_rotate.c" 
    "../src/SDL.c" 
    "../src/SDL_assert.c" 
    "../src/SDL_error.c" 
    "../src/SDL_hints.c" 
    "../src/SDL_log.c" 
    "../src/stdlib/SDL_getenv.c" 
    "../src/stdlib/SDL_iconv.c" 
    "../src/stdlib/SDL_malloc.c" 
    "../src/stdlib/SDL_qsort.c" 
    "../src/stdlib/SDL_stdlib.c" 
    "../src/stdlib/SDL_string.c" 
    "../src/thread/generic/SDL_syssem.c" 
    "../src/thread/SDL_thread.c" 
    "../src/thread/stdcpp/SDL_syscond.cpp" 
    "../src/thread/stdcpp/SDL_sysmutex.cpp" 
    "../src/thread/stdcpp/SDL_systhread.cpp" 
    "../src/timer/SDL_timer.c" 
    "../src/timer/windows/SDL_systimer.c" 
    "../src/video/dummy/SDL_nullevents.c" 
    "../src/video/dummy/SDL_nullframebuffer.c" 
    "../src/video/dummy/SDL_nullvideo.c" 
    "../src/video/SDL_blit.c" 
    "../src/video/SDL_blit_0.c" 
    "../src/video/SDL_blit_1.c" 
    "../src/video/SDL_blit_A.c" 
    "../src/video/SDL_blit_auto.c" 
    "../src/video/SDL_blit_copy.c" 
    "../src/video/SDL_blit_N.c" 
    "../src/video/SDL_blit_slow.c" 
    "../src/video/SDL_bmp.c" 
    "../src/video/SDL_clipboard.c" 
    "../src/video/SDL_egl.c" 
    "../src/video/SDL_fillrect.c" 
    "../src/video/SDL_pixels.c" 
    "../src/video/SDL_rect.c" 
    "../src/video/SDL_RLEaccel.c" 
    "../src/video/SDL_shape.c" 
    "../src/video/SDL_stretch.c" 
    "../src/video/SDL_surface.c" 
    "../src/video/SDL_video.c" 
    "../src/video/winrt/SDL_winrtevents.cpp"
    "../src/video/winrt/SDL_winrtgamebar.cpp"
    "../src/video/winrt/SDL_winrtkeyboard.cpp"
    "../src/video/winrt/SDL_winrtmessagebox.cpp"
    "../src/video/winrt/SDL_winrtmouse.cpp"
    "../src/video/winrt/SDL_winrtopengles.cpp"
    "../src/video/winrt/SDL_winrtpointerinput.cpp"
    "../src/video/winrt/SDL_winrtvideo.cpp"
)

set_source_files_properties(
    "../src/core/winrt/SDL_winrtapp_common.cpp"
    "../src/core/winrt/SDL_winrtapp_direct3d.cpp"
    "../src/core/winrt/SDL_winrtapp_xaml.cpp"
    "../src/audio/xaudio2/SDL_xaudio2_winrthelpers.cpp"
    "../src/filesystem/winrt/SDL_sysfilesystem.cpp"
    "../src/render/direct3d11/SDL_render_winrt.cpp"
    "../src/video/winrt/SDL_winrtevents.cpp"
    "../src/video/winrt/SDL_winrtgamebar.cpp"
    "../src/video/winrt/SDL_winrtkeyboard.cpp"
    "../src/video/winrt/SDL_winrtmessagebox.cpp"
    "../src/video/winrt/SDL_winrtmouse.cpp"
    "../src/video/winrt/SDL_winrtopengles.cpp"
    "../src/video/winrt/SDL_winrtpointerinput.cpp"
    "../src/video/winrt/SDL_winrtvideo.cpp"
    PROPERTIES COMPILE_FLAGS /ZW)

add_library(SDL2_uwp SHARED ${INCLUDE_FILES} ${SOURCE_FILES})

target_compile_definitions(SDL2_uwp PRIVATE _CRT_SECURE_NO_WARNINGS SDL_BUILDING_WINRT)

set_target_properties(SDL2_uwp PROPERTIES LINK_FLAGS_DEBUG "/NODEFAULTLIB:\"vccorlibd\" /NODEFAULTLIB:\"msvcrtd\" vccorlibd.lib msvcrtd.lib")
set_target_properties(SDL2_uwp PROPERTIES LINK_FLAGS_RELEASE "/NODEFAULTLIB:\"vccorlib\" /NODEFAULTLIB:\"msvcrt\" vccorlib.lib msvcrt.lib")
